ansible-training/k8s/backend/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: sumail829/contactmanager-backend
        ports:
        - containerPort: 8000
        command: ["sh", "-c"]
        args:
          - sleep 10 && alembic upgrade head && uvicorn app.main:app --host 0.0.0.0 --port 8000
